--- a/Problems/1985E.md
+++ b/Problems/1985E.md
@@ -5,8 +5,9 @@ Level: 1200
 Solved: true
 Idea_clave: fuerza bruta directamente sobre $x$ y $y$,
 Mistakes: Considerar los divisores como fuerza bruteables
-resolve_again_obligatory: true
+resolve_again_obligatory: false
 URL: sd
+MIstakes: asdf
 ---
 
 ## De que va el problema
