--- a/Problems/1463B.md
+++ b/Problems/1463B.md
@@ -1,15 +1,21 @@
 ---
 tags:
-Level: 1000
-Solved: false 
-Idea_clave: 
-MIstakes: 
+  - bitmask
+  - greedy
+  - constructive algorithm
+Level: 1400
+Solved: true
+Idea_clave: de que forma podemos crear un arreglo de modo que cresca rapido y decresca rapido de modo que sean multiplos, en efecto -> trabajar con multiplicidad
+MIstakes: No considerar  el constrain de que debe estar en un rango entre 1< x <= 1e9
 resolve_again_obligatory: false
 URL: 
 ---
 
 ## De que va el problema
 
-- 
+- te dan una secuencia tal que a_i <= 1e9 , te piden hallar otra secuencia b de modo que 2 $\sum |a_i - b_i| <= S$ , y se cumpla b_i = 0 mod (b_{i+1}) o b_i = 0 mod (b_{i+1}) , donde S es la suma de los elementos de a.
 
 ### Posibles solucion
+
+- trabar con bits , es decir trabajar con multiplos de 2 para la construccion de b. con un enfoque greedy, nose si baya a funcinoar pero ya es un avance.
+- En efecto, esa era la solucion
