--- a/Problems/1985E.md
+++ b/Problems/1985E.md
@@ -6,7 +6,7 @@ Solved: true
 Idea_clave: fuerza bruta directamente sobre $x$ y $y$,
 Mistakes: Considerar los divisores como fuerza bruteables
 resolve_again_obligatory: false
-URL: sd
+URL: ""
 MIstakes: ""
 ---
 
