--- a/Problems/1918C.md
+++ b/Problems/1918C.md
@@ -15,8 +15,8 @@ URL:
 ### Posibles solucion
 
 - elegir a alguno como el mayor y entonces minimizar al que se escogio como menor
-- si elegimos a a o b mayor, es decir si cedemos todos bits que se puedan dar al que decidimos menor, entonces esto funcionara?
+- si elegimos a "a" o "b" mayor, es decir si cedemos todos bits que se puedan dar al que decidimos como menor, entonces esto funcionara?
     - sep, pero falla cuando al que elegimos mayor y cede todo sus bit pierde la caracteristica de ser mayor
 
 
-- entonces asignamos a point como el ultimo bit que puede ser modificado, de modo que ya se sabra quien sera el mayor o no. Si es que con esta informacion no se sabe tenemos que buscar otra forma, quizas recursiva
+- entonces asignamos a point como el ultimo bit que puede ser modificado, de modo que ya se sabra quien sera el mayor o no. Si es que con esta informacion no se sabe tenemos que buscar otra forma, quizas la solucion sea recursiva --> Aca determinamos quien sera menor
