--- a/Problems/1918C.md
+++ b/Problems/1918C.md
@@ -1,9 +1,13 @@
 ---
 tags:
+  - bitmask
+  - greedy
+  - implementation
+  - math
 Level: 1400
-Solved: false 
+Solved: true
 Idea_clave: 
-MIstakes: 
+MIstakes: Putos bits, no aguanta con el long long >>
 resolve_again_obligatory: false
 URL: 
 ---
@@ -19,4 +23,4 @@ URL:
     - sep, pero falla cuando al que elegimos mayor y cede todo sus bit pierde la caracteristica de ser mayor
 
 
-- entonces asignamos a point como el ultimo bit que puede ser modificado, de modo que ya se sabra quien sera el mayor o no. Si es que con esta informacion no se sabe tenemos que buscar otra forma, quizas la solucion sea recursiva --> Aca determinamos quien sera menor
+- entonces asignamos a point como el ultimo bit que puede ser modificado, de modo que ya se sabra quien sera el mayor o no. Si es que con esta informacion no se sabe tenemos que buscar otra forma, quizas la solucion sea recursiva --> Aca determinamos quien sera menor. En efecto, no es nesesario hacer cosas recursivas, porque si no sabemos quien es mayor hasta el point, entonces se determinara mayor al que ya tenga prendido el bit, en el point, como mayor. Entonces estes repartira sus bits al otro.
