--- a/Problems/1918C.md
+++ b/Problems/1918C.md
@@ -6,10 +6,10 @@ tags:
   - math
 Level: 1400
 Solved: true
-Idea_clave: 
+Idea_clave: Elegir a alguno de los dos como mayor
 MIstakes: Putos bits, no aguanta con el long long >>
-resolve_again_obligatory: false
-URL: 
+resolve_again_obligatory: true
+URL:
 ---
 
 ## De que va el problema
