--- a/Problems/1644C.md
+++ b/Problems/1644C.md
@@ -1,8 +1,7 @@
 ---
 tags:
-  - implementation
-Level: 800
-Solved: true
+Level: 1000
+Solved: false 
 Idea_clave: 
 MIstakes: 
 resolve_again_obligatory: false
