--- a/Problems/1993C.md
+++ b/Problems/1993C.md
@@ -8,7 +8,7 @@ Idea_clave: tener en cuenta los residuos como prefijos para poder contar en luga
 MIstakes: No considerar que algun estado con n cuartos prendidos no nesesariamente sera una respuesta, por lo tanto hay que hacer una fuerza bruta par encontrar la respuesta
 Mistakes: ""
 resolve_again_obligatory: true
-URL: https://codeforces.com/contest/1993/problem/C
+URL:
 ---
 
 ## De que va el problema
