--- a/Problems/1606B.md
+++ b/Problems/1606B.md
@@ -1,9 +1,8 @@
 ---
 tags:
-  - CSES
-  - DP
-Level: 1000
-Solved: true
+  - greedy
+Level: 1100
+Solved: false 
 Idea_clave: 
 MIstakes: 
 resolve_again_obligatory: false
