--- a/Problems/1721C.md
+++ b/Problems/1721C.md
@@ -1,9 +1,8 @@
 ---
 tags:
-  - CSES
-  - DP
-Level: 1000
-Solved: true
+  - greddy
+Level: 1400
+Solved: true 
 Idea_clave: 
 MIstakes: 
 resolve_again_obligatory: false
