--- a/Problems/580C.md
+++ b/Problems/580C.md
@@ -1,9 +1,12 @@
 ---
 tags:
-Level: 1000
-Solved: false 
-Idea_clave: 
-MIstakes: 
+  - dfs and similars
+  - trees
+  - graphs
+Level: 1500
+Solved: true 
+Idea_clave: hasta este nodo cuantos gatos esta permitido ver, que pasas si ya no puede avanzar?
+MIstakes: no considerar cuando ya no pueda avanzar, yo simplemente reiniciaba el contador
 resolve_again_obligatory: false
 URL: 
 ---
