--- a/Problems/task1745.md
+++ b/Problems/task1745.md
@@ -3,15 +3,15 @@ tags:
   - CSES
   - DP
 Level: 1000
-Solved: true
-Idea_clave: 
-MIstakes: 
+Solved: true 
+Idea_clave: mochilon
+MIstakes: definir mal el dp, me estaba comiendo el indice anterior
 resolve_again_obligatory: false
 URL: 
 ---
 
 ## De que va el problema
 
-- 
+- mochilon
 
 ### Posibles solucion
