--- a/Problems/task2413.md
+++ b/Problems/task2413.md
@@ -4,7 +4,7 @@ tags:
   - DP
 Level: 1000
 Solved: true
-Idea_clave: 
+Idea_clave: Use demasiados estados
 MIstakes: 
 resolve_again_obligatory: false
 URL: 
@@ -15,3 +15,5 @@ URL:
 - 
 
 ### Posibles solucion
+
+- un dp de dos estados que se pueda sumar facilmente con piso y longitud de caja que pueda ser desglozado
