--- a/Problems/2031B.md
+++ b/Problems/2031B.md
@@ -1,7 +1,9 @@
 ---
 tags:
-Level: 1000
-Solved: false 
+  - greedy
+  - brute force
+Level: 900
+Solved: true 
 Idea_clave: 
 MIstakes: 
 resolve_again_obligatory: false
