--- a/Problems/2031C.md
+++ b/Problems/2031C.md
@@ -1,9 +1,12 @@
 ---
 tags:
-Level: 1000
-Solved: false 
+  - constructive algorithms
+  - number theory
+  - math
+Level: 1300
+Solved: true 
 Idea_clave: 
-MIstakes: 
+MIstakes: el puto return 0
 resolve_again_obligatory: false
 URL: 
 ---
