--- a/Problems/2031D.md
+++ b/Problems/2031D.md
@@ -4,9 +4,9 @@ tags:
   - dfs and similars
   - dsu
   - greedy
-Level: 1000
-Solved: false 
-Idea_clave: 
+Level: 1700
+Solved: true 
+Idea_clave: como merger segementos?, tambien puedo usar un bfs con dp 
 MIstakes: 
 resolve_again_obligatory: false
 URL: 
