--- a/Problems/2037C.md
+++ b/Problems/2037C.md
@@ -1,7 +1,10 @@
 ---
 tags:
+  - greedy
+  - constructive algorithms
+  - math
 Level: 1000
-Solved: false 
+Solved: true 
 Idea_clave: 
 MIstakes: 
 resolve_again_obligatory: false
