--- a/Problems/2037D.md
+++ b/Problems/2037D.md
@@ -1,10 +1,12 @@
 ---
 tags:
-Level: 1000
-Solved: false 
+  - data structures
+  - greedy
+Level: 1300
+Solved: true 
 Idea_clave: 
 MIstakes: 
-resolve_again_obligatory: false
+resolve_again_obligatory: true
 URL: 
 ---
 
