--- a/Problems/1139C.md
+++ b/Problems/1139C.md
@@ -3,10 +3,10 @@ tags:
   - Math
   - graphs
 Level: 1500
-Solved: false 
-Idea_clave: 
+Solved: true
+Idea_clave: que grupos no estan obligatoriamente en tu arreglos
 MIstakes: 
-resolve_again_obligatory: false
+resolve_again_obligatory: true
 URL: 
 ---
 
