--- a/Problems/1606B.md
+++ b/Problems/1606B.md
@@ -1,8 +1,9 @@
 ---
 tags:
   - greedy
+  - implementation
 Level: 1100
-Solved: false 
+Solved: true
 Idea_clave: 
 MIstakes: 
 resolve_again_obligatory: false
