--- a/Problems/1676H1.md
+++ b/Problems/1676H1.md
@@ -1,10 +1,11 @@
 ---
 tags:
-Level: 1000
-Solved: false 
+  - Brute Force
+Level: 1400
+Solved: true
 Idea_clave: 
 MIstakes: 
-resolve_again_obligatory: false
+resolve_again_obligatory: true
 URL: 
 ---
 
