--- a/Problems/1710A.md
+++ b/Problems/1710A.md
@@ -1,7 +1,9 @@
 ---
 tags:
-Level: 1000
-Solved: false 
+  - constructive algorithm
+  - Math
+Level: 1500
+Solved: true
 Idea_clave: 
 MIstakes: 
 resolve_again_obligatory: false
