--- a/Problems/2034C.md
+++ b/Problems/2034C.md
@@ -3,10 +3,10 @@ tags:
   - bfs and similars
   - graphs
   - implementation
-Level: 1000
-Solved: true 
+Level: 1400
+Solved: true
 Idea_clave: como chch implemetar , el dp vuela
-MIstakes: demasiados que no podria contarlos
+MIstakes: demasiados que no podria contarlos, usar fill en lugar de memset o optimizar el dp
 resolve_again_obligatory: true
 URL: 
 ---
