--- a/Problems/2039A.md
+++ b/Problems/2039A.md
@@ -1,7 +1,9 @@
 ---
 tags:
-Level: 1000
-Solved: false 
+  - Number Theory
+  - Math
+Level: 800
+Solved: true
 Idea_clave: 
 MIstakes: 
 resolve_again_obligatory: false
