--- a/Problems/2047C.md
+++ b/Problems/2047C.md
@@ -1,7 +1,8 @@
 ---
 tags:
-Level: 1000
-Solved: false 
+  - greedy
+Level: 1200
+Solved: true
 Idea_clave: 
 MIstakes: 
 resolve_again_obligatory: false
