--- a/Problems/687C.md
+++ b/Problems/687C.md
@@ -1,10 +1,11 @@
 ---
 tags:
-Level: 1000
-Solved: false 
+  - DP
+Level: 1900
+Solved: true
 Idea_clave: 
 MIstakes: no considerar que las monedas son unicas
-resolve_again_obligatory: false
+resolve_again_obligatory: true
 URL: 
 ---
 
