--- a/Problems/982C.md
+++ b/Problems/982C.md
@@ -1,7 +1,9 @@
 ---
 tags:
-Level: 1000
-Solved: false 
+  - DP
+  - dfs and similars
+Level: 1500
+Solved: true
 Idea_clave: 
 MIstakes: 
 resolve_again_obligatory: false
