--- a/Problems/1759E.md
+++ b/Problems/1759E.md
@@ -1,7 +1,9 @@
 ---
 tags:
-Level: 1000
-Solved: false 
+  - Brute Force
+  - DP
+Level: 1500
+Solved: true
 Idea_clave: 
 MIstakes: 
 resolve_again_obligatory: false
