--- a/Problems/2033B.md
+++ b/Problems/2033B.md
@@ -1,7 +1,9 @@
 ---
 tags:
-Level: 1000
-Solved: false 
+  - Brute Force
+  - constructive algorithm
+Level: 900
+Solved: true
 Idea_clave: 
 MIstakes: 
 resolve_again_obligatory: false
