--- a/Problems/2033D.md
+++ b/Problems/2033D.md
@@ -1,7 +1,8 @@
 ---
 tags:
-Level: 1000
-Solved: false 
+  - data structures
+Level: 1300
+Solved: true
 Idea_clave: 
 MIstakes: 
 resolve_again_obligatory: false
