--- a/Problems/2039B.md
+++ b/Problems/2039B.md
@@ -1,7 +1,9 @@
 ---
 tags:
+  - greedy
+  - implementation
 Level: 1000
-Solved: false 
+Solved: true
 Idea_clave: 
 MIstakes: 
 resolve_again_obligatory: false
