--- a/Problems/task1746.md
+++ b/Problems/task1746.md
@@ -1,11 +1,11 @@
 ---
-tags:
+tags: 
 Level: 1400
-Solved: false 
+Solved: true
 Idea_clave: 
 MIstakes: 
 resolve_again_obligatory: false
-URL: 
+URL:
 ---
 
 ## De que va el problema
