--- a/Problems/2040B.md
+++ b/Problems/2040B.md
@@ -1,10 +1,9 @@
 ---
 tags:
-  - Brute Force
-Level: 1500
-Solved: true
-Idea_clave: de acuerdo a la mascara como puedes construir los numeros a y b tal que a^b == x
-MIstakes: el caso cuando la mascara sea 0. Otro error fue el overflow(fuck you long long)
+Level: 1000
+Solved: false 
+Idea_clave: 
+MIstakes: 
 resolve_again_obligatory: false
 URL: 
 ---
