script y nuevos problemas

--- a/Problems/1661B.md
+++ b/Problems/1661B.md
@@ -1,10 +1,9 @@
 ---
 tags:
-    - atcoder
-    - brute force
-Level: 1000
+    - Dp
+Level: 1300
 Solved: true 
-Idea_clave: 
+Idea_clave: el dp con bfs
 MIstakes: 
 resolve_again_obligatory: true
 URL: 
