--- a/Problems/1829H.md
+++ b/Problems/1829H.md
@@ -1,8 +1,7 @@
 ---
 tags:
-    - atcoder
-    - brute force
-Level: 1000
+    - Dp
+Level: 1700
 Solved: true 
 Idea_clave: 
 MIstakes: 
@@ -16,6 +15,10 @@ URL:
 
 ### Posibles solucion
 
+- un elemento sera ignorado si tiene menos de k bits prendidos
+Un dp de bits [prendidos ][pos]
+
+dp[ conf -> bits prendidos][pos] : todas las subsecuencias que el andwise de todos esos sea conf
 
 ## Lista de WA antes del AC
 
