--- a/Problems/1830A.md
+++ b/Problems/1830A.md
@@ -1,12 +1,10 @@
 ---
 tags:
-    - atcoder
-    - brute force
 Level: 1000
-Solved: true 
+Solved: false 
 Idea_clave: 
 MIstakes: 
-resolve_again_obligatory: true
+resolve_again_obligatory: false
 URL: 
 ---
 
@@ -16,7 +14,8 @@ URL:
 
 ### Posibles solucion
 
-
+- Idea: armar el grafo y de hay hacer seguimiento con un priority queue, o un set
+W
 ## Lista de WA antes del AC
 
 ## Metacognition (Existe mejores, otras soluciones? Puedes demostrar, estar completamente seguro de tu solucion, demustralo!!)
