--- a/Problems/1858B.md
+++ b/Problems/1858B.md
@@ -1,10 +1,9 @@
 ---
 tags:
-    - atcoder
-    - brute force
-Level: 1000
+    -Dp
+Level: 1500
 Solved: true 
-Idea_clave: 
+Idea_clave: agregar dos carros al final y inicio, estrategicamente
 MIstakes: 
 resolve_again_obligatory: true
 URL: 
