--- a/Problems/1859C.md
+++ b/Problems/1859C.md
@@ -1,11 +1,10 @@
 ---
 tags:
-    - atcoder
-    - brute force
-Level: 1000
+    - greedy
+Level: 1200
 Solved: true 
 Idea_clave: 
-MIstakes: 
+MIstakes: que greedy pendejo, ni se porque funciona
 resolve_again_obligatory: true
 URL: 
 ---
