--- a/Problems/1872E.md
+++ b/Problems/1872E.md
@@ -1,12 +1,11 @@
 ---
 tags:
-    - atcoder
-    - brute force
-Level: 1000
+    - Dp
+Level: 1500
 Solved: true 
 Idea_clave: 
 MIstakes: 
-resolve_again_obligatory: true
+resolve_again_obligatory: false
 URL: 
 ---
 
@@ -16,6 +15,7 @@ URL:
 
 ### Posibles solucion
 
+- Prefix xor
 
 ## Lista de WA antes del AC
 
