--- a/Problems/2067B.md
+++ b/Problems/2067B.md
@@ -1,12 +1,10 @@
 ---
 tags:
-    - atcoder
-    - brute force
-Level: 1000
+Level: 1300
 Solved: true 
 Idea_clave: 
 MIstakes: 
-resolve_again_obligatory: true
+resolve_again_obligatory: false
 URL: 
 ---
 
