--- a/Problems/2008D.md
+++ b/Problems/2008D.md
@@ -1,12 +1,11 @@
 ---
 tags:
-    - atcoder
-    - brute force
-Level: 1000
+    - Dp
+Level: 1100
 Solved: true 
 Idea_clave: 
 MIstakes: 
-resolve_again_obligatory: true
+resolve_again_obligatory: false
 URL: 
 ---
 
